objects/Business_Partner_Function__c.object
<CustomObject>
    <fields>
        <fullName>APTS_City_Text__c</fullName>
        <label>APTS City Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sold_To_Text__c</fullName>
        <label>APTS Sold To Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_State_Text__c</fullName>
        <label>APTS State Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Street_Text__c</fullName>
        <label>APTS Street Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Zip_Text__c</fullName>
        <label>APTS Zip Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_SAP_Number__c</fullName>
        <formula>IF(ISBLANK(Related_Account_GLI__c) ,Related_Account__r.SAPAccountNumber__c, Related_Account_GLI__r.Source_System_Account_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SAP Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>IF(ISBLANK(Related_Account_GLI__c) ,Related_Account__r.BillingCity, Related_Account_GLI__r.City__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is the unique external identifier for upsert</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Function__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Function</label>
        <referenceTo>Partner_Function__c</referenceTo>
        <relationshipLabel>Business Partner Functions</relationshipLabel>
        <relationshipName>Business_Partner_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Account_GLI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created as part of OC-GLI implementation and it is look up to Source System Details object.</description>
        <label>Related Account GLI</label>
        <referenceTo>Source_System_Detail__c</referenceTo>
        <relationshipLabel>Business Partner Functions (Related Account GLI)</relationshipLabel>
        <relationshipName>Business_Partner_Functions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Partner Functions</relationshipLabel>
        <relationshipName>Business_Partner_Functions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill-To</fullName>
                </value>
                <value>
                    <fullName>Ship-To</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>Sold To</fullName>
                </value>
                <value>
                    <fullName>Payor</fullName>
                </value>
                <value>
                    <fullName>Customer Org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABEP</fullName>
                </value>
                <value>
                    <fullName>BEJE</fullName>
                </value>
                <value>
                    <fullName>EDIC</fullName>
                </value>
                <value>
                    <fullName>LLEY</fullName>
                </value>
                <value>
                    <fullName>LLPA</fullName>
                </value>
                <value>
                    <fullName>LLUR</fullName>
                </value>
                <value>
                    <fullName>LPCL</fullName>
                </value>
                <value>
                    <fullName>LPTC</fullName>
                </value>
                <value>
                    <fullName>RV01</fullName>
                </value>
                <value>
                    <fullName>SCSI</fullName>
                </value>
                <value>
                    <fullName>SFWS</fullName>
                </value>
                <value>
                    <fullName>TSCE</fullName>
                </value>
                <value>
                    <fullName>TSL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sold_To_Account_GLI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created as part of OC-GLI implementation and it is look up to Source System Details object.</description>
        <label>Sold To Acct SSD</label>
        <referenceTo>Source_System_Detail__c</referenceTo>
        <relationshipLabel>Business Partner Functions</relationshipLabel>
        <relationshipName>Business_Partner_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Partner Functions</relationshipLabel>
        <relationshipName>Business_Partner_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>IF(ISBLANK(Related_Account_GLI__c) ,Related_Account__r.BillingState, Related_Account_GLI__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <formula>IF(ISBLANK(Related_Account_GLI__c) ,Related_Account__r.BillingStreet, Related_Account_GLI__r.Number_Street__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <formula>IF(ISBLANK(Related_Account_GLI__c) ,Related_Account__r.BillingPostalCode, Related_Account_GLI__r.Postal_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <formula>IF(ISBLANK(Related_Account_GLI__c) ,Related_Account__r.BillingCountry, Related_Account_GLI__r.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>country</label>
        <type>Text</type>
    </fields>
    <label>Business Partner Function</label>
    <nameField>
        <displayFormat>BPF-{0000}</displayFormat>
        <label>Business Partner Function Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Partner Functions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Related_Account_is_a_required_field</fullName>
        <active>true</active>
        <description>Related Account is a required Field</description>
        <errorConditionFormula>AND( $Setup.LTS_Disable_Application_Automation__c.LTS_Disable_Validation_Rules__c = false,LEN(Related_Account_GLI__c)=0, LEN(Related_Account__c)=0)</errorConditionFormula>
        <errorDisplayField>Related_Account__c</errorDisplayField>
        <errorMessage>Related Account is a required Field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Relationship_type_is_a_required_field</fullName>
        <active>true</active>
        <description>Relationship type is a required field</description>
        <errorConditionFormula>AND( $Setup.LTS_Disable_Application_Automation__c.LTS_Disable_Validation_Rules__c = false,ISPICKVAL(Relationship_Type__c,&apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Relationship_Type__c</errorDisplayField>
        <errorMessage>Relationship type is a required field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sold_To_Account_is_a_required_field</fullName>
        <active>true</active>
        <description>Sold To account is a required field</description>
        <errorConditionFormula>AND( $Setup.LTS_Disable_Application_Automation__c.LTS_Disable_Validation_Rules__c = false,LEN(Sold_To_Account_GLI__c)=0, LEN(Sold_To_Account__c)=0)</errorConditionFormula>
        <errorDisplayField>Sold_To_Account__c</errorDisplayField>
        <errorMessage>Sold To Account is a required field</errorMessage>
    </validationRules>
</CustomObject>